# Multi-Agent-Orchestration-and-Evaluation-System

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.yml  prompt.md  pyproject.toml
agents/: compression.py  critique.py  decomposition.py  graph.py  meta.py  prompts.py  rag.py  rag_chunks.py  router.py  synthesis.py
api/: dependencies.py  main.py
api/routes/: __init__.py  approve.py  eval.py  query.py  reeval.py  trace.py
api/schemas/: responses.py
context_manager/: __init__.py  budget.py
core/: config.py  llm.py  logging.py
data/chroma/: chroma.sqlite3
db/: __init__.py  models.py  queries.py
db/migrations/: env.py
db/migrations/versions/: 0001_initial.py
eval/: harness.py  scoring.py  test_cases.py  test_cases_data.py
logviewer/: app.py
logviewer/templates/: index.html
observability/: Dockerfile  app.py
observability/templates/: index.html
schemas/: context.py  eval.py  tool_result.py
tools/: __init__.py  base.py  code_sandbox.py  db_lookup.py  self_reflection.py  tool_logger.py  web_search.py
worker/: tasks.py
