[project]
name = "multi-agent-system"
version = "0.1.0"
description = "Production-grade multi-agent LLM orchestration and evaluation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "openai>=1.30.0",
    "exa-py>=1.0.0",
    "chromadb>=0.5.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "tiktoken>=0.7.0",
    "structlog>=24.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "rouge-score>=0.1.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sqlparse>=0.5.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "api",
    "agents",
    "tools",
    "context_manager",
    "eval",
    "worker",
    "db",
    "observability",
    "schemas",
]


